--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="col-md-3 col-sm-6 nopadding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="https://playoverwatch.com/ko-kr/">
                                 <div class="hover-text">
                                     <h5>Overwatch</h5>
                                     <p class="lead">경쟁전 / 사용자 지정 게임 위주 플레이</p>
@@ -255,7 +255,7 @@
         <div class="overlay">
             <div class="container text-center">
                 <div class="section-title">
-                    <h2>멋쟁이사자처럼 X 고려대학교</h2>
+                    <h2>Archy X 고려대학교</h2>
                     <hr>
                 </div>
 
@@ -275,7 +275,7 @@
                         <h2>미래</h2>
                         <hr>
                     </div>
-                    <p>한국거주 중국인의 衣食住를 책임지는 서비스 개발</p>
+                    <p>로또 1등 당첨 연속 3번</p>
                     <p>초보자도 쉽게 익힐수 있는 중국어 학습 서비스 개발</p>
                 </div>
             </div>
