--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="col-md-3 col-sm-6 nopadding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="www.playbattlegrounds.com">
                                 <div class="hover-text">
                                     <h5>PUBG</h5>
                                     <p class="lead">SQUAD 위주 플레이</p>
@@ -218,7 +218,7 @@
                 <div class="col-md-3 col-sm-6 nopadding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="www.battlefield.com">
                                 <div class="hover-text">
                                     <h5>Battlefield 1</h5>
                                     <p class="lead">Multiplayer 위주 게임</p>
@@ -232,7 +232,7 @@
                 <div class="col-md-3 col-sm-6 nopadding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="store.steampowered.com">
                                 <div class="hover-text">
                                     <h5>likeLion</h5>
                                     <p class="lead">멋쟁이사자처럼</p>
