--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                         <div class="hover-bg">
                             <a href="store.steampowered.com">
                                 <div class="hover-text">
-                                    <h5>likeLion</h5>
-                                    <p class="lead">멋쟁이사자처럼</p>
+                                    <h5>Steam</h5>
+                                    <p class="lead">2주에 한번씩 게임 구매</p>
                                     <div class="hline"></div>
                                 </div>
                             </a>
