--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </div>
                     <p>2013. 3. 고려대학교 조형학부 입학</p>
                     <p>2013. 3. ~ 고려대학교 중앙동아리 그루터기 활동 시작</p>
-                    <p>2014. 3. ~ 2014. 6. 고려대학교 중앙동아리 그루터기 부화장 활동</p>
+                    <p>2014. 3. ~ 2014. 6. 고려대학교 중앙동아리 그루터기 부회장 활동</p>
                     <p>2014. 3. ~ 2015. 6. League Of Legends</p>
                     <p>2015. 6. ~ 2016. 5. Maplestory2</p>
                     <p>2016. 5. ~ 2017. 7. Overwatch</p>
